--- a/.github/workflows/commit-stage.yml
+++ b/.github/workflows/commit-stage.yml
@@ -29,9 +29,10 @@ jobs:
         id: scan
         with:
           path: "${{ github.workspace }}"
-          fail-build: true
+          fail-build: false
           severity-cutoff: high
           acs-report-enable: true
+
       - name: Upload vulnerability report
         uses: github/codeql-action/upload-sarif@v2
         if: success() || failure()
